--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     environment:
       MYSQL_HOST: "db"
       MYSQL_USER: 'root'
-      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_RANDOM_ROOT_PASSWORD: 'True'
     #  MYSQL_DATABASE: maria_db
       TZ: 'Asia/Tokyo'
     volumes:
-     - ./db/mycustom.cnf:/etc/mysql/conf.d/custom.cnf
-     - ./db:/var/lib/mysql:Z
+     - ./mycustom.cnf:/etc/mysql/conf.d/custom.cnf
+     - ./data:/var/lib/mysql:Z
     ports:
      - 3306:3306
     networks:
